# YoutubePlaylistSync

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-release.yml  build.yml  build_v2.yml  integration.yml  lint_ruff.yml  refresh-yt-dlp-and-release.yml  unit-tests.yml  update-yt-dlp.yml
config/: yt-playlist-config.example.json
docker/: Dockerfile  compose.yaml  docker-entrypoint.sh
plans/: GUI plan.md  mp3 metadata plan.md  project plan.md  project schedule.md  python_youtube_playlist_sync_conversion_plan.md  sync refactor maybe.md
src/app/: cli.py  main.py
src/app/config/: settings.py
src/app/core/: models.py
src/app/core/database/: db.py
src/app/core/download/: downloader.py  queue_manager.py  workers.py
src/app/core/scanner/: playlist_scanner.py
src/app/core/sync/: diff_engine.py  executor.py  filesystem.py  reorder.py  runner.py  service.py
src/app/core/utils/: __init__.py  naming.py  rate_limit.py  version.py  yt.py
src/app/gui/: app_icon.py  autosave.py  bus_bridge.py  config_store.py  main.py  runner.py  smooth_scroll.py
src/app/gui/pages/: about.py  logs.py  playlists.py  queue.py  settings.py
tests/: test_event_surface.py  test_integration_audio.py  test_integration_both.py  test_integration_video.py
