[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytpl-sync"
version = "2.1.1"
description = "YouTube playlist Sync"
readme = "README.md"
authors = [ { name = "Dark_Zoul" } ]
license = { file = "LICENSE" }
keywords = ["youtube", "yt-dlp", "playlist", "sync"]
requires-python = ">=3.10"
dependencies = [
	"yt-dlp>=2026.3.17",
    "PySide6",
]
[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "black"
]

[project.urls]
Home = "https://github.com/darkzoul5/YoutubePlaylistSync"

[project.scripts]
ytpl-sync = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]
